// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Modal Bottom Sheet 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-style: none;
  outline: none;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c11 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-style: none;
  outline: none;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-fill-available;
  width: -moz-available;
  width: stretch;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text5);
  background-color: var(--charcoal-assertive);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c11:not(:disabled):not([aria-disabled]):active,
.c11[aria-disabled='false']:active,
.c11:not(:disabled):not([aria-disabled]):focus,
.c11[aria-disabled='false']:focus,
.c11:not(:disabled):not([aria-disabled]):focus-visible,
.c11[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c11:not(:disabled):not([aria-disabled]):hover,
.c11[aria-disabled='false']:hover {
  color: var(--charcoal-text5-hover);
  background-color: var(--charcoal-assertive-hover);
}

.c11:not(:disabled):not([aria-disabled]):active,
.c11[aria-disabled='false']:active {
  color: var(--charcoal-text5-press);
  background-color: var(--charcoal-assertive-press);
}

.c11:disabled,
.c11[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c12 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-style: none;
  outline: none;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-fill-available;
  width: -moz-available;
  width: stretch;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c12:not(:disabled):not([aria-disabled]):active,
.c12[aria-disabled='false']:active,
.c12:not(:disabled):not([aria-disabled]):focus,
.c12[aria-disabled='false']:focus,
.c12:not(:disabled):not([aria-disabled]):focus-visible,
.c12[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c12:not(:disabled):not([aria-disabled]):hover,
.c12[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c12:not(:disabled):not([aria-disabled]):active,
.c12[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c12:disabled,
.c12[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c13 {
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font: inherit;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c13:disabled,
.c13[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c13:focus {
  outline: none;
}

.c13::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c14 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--charcoal-text3);
  background-color: var(--charcoal-transparent);
  border-radius: 999999px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
}

.c14:not(:disabled):not([aria-disabled]):hover,
.c14[aria-disabled='false']:hover {
  background-color: var( --charcoal-transparent-hover );
}

.c14:not(:disabled):not([aria-disabled]):active,
.c14[aria-disabled='false']:active {
  background-color: var( --charcoal-transparent-press );
}

.c14:not(:disabled):not([aria-disabled]):focus,
.c14[aria-disabled='false']:focus,
.c14:not(:disabled):not([aria-disabled]):active,
.c14[aria-disabled='false']:active,
.c14:not(:disabled):not([aria-disabled]):focus-visible,
.c14[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c14:disabled,
.c14[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
}

.c2 {
  margin: auto;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: 440px;
  background-color: var(--charcoal-surface1);
  border-radius: 24px;
}

.c2:focus {
  outline: none;
}

.c1 {
  z-index: 10;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 40px 0;
  box-sizing: border-box;
  background-color: var(--charcoal-surface4);
}

.c15 {
  position: absolute;
  top: 8px;
  right: 8px;
  color: var(--charcoal-text3);
  -webkit-transition: 0.2s color;
  transition: 0.2s color;
}

.c15:not(:disabled):not([aria-disabled]):hover,
.c15[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
}

.c15:not(:disabled):not([aria-disabled]):active,
.c15[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
}

.c4 {
  margin: 0;
  font-weight: inherit;
  font-size: inherit;
}

.c3 {
  height: 64px;
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  color: var(--charcoal-text1);
  font-size: 16px;
  line-height: 24px;
  font-weight: bold;
  display: flow-root;
}

.c5::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c5::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c8 {
  padding-left: 16px;
  padding-right: 16px;
}

.c6 {
  padding-bottom: 40px;
}

.c10 {
  display: grid;
  grid-auto-flow: row;
  grid-row-gap: 8px;
  padding-top: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

.c7 {
  display: grid;
  gap: 24px;
}

.c9 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c9::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c9::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

@media (max-width:743px) {
  .c2 {
    max-width: 440px;
    width: calc(100% - 48px);
    max-width: unset;
    width: 100%;
    border-radius: 0;
    margin: auto 0 0 0;
  }
}

@media (max-width:743px) {
  .c1 {
    padding: 0;
  }
}

@media (max-width:743px) {
  .c3 {
    height: 48px;
  }
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="c0"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="c1"
      onPointerDown={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={null}
        onKeyDown={[Function]}
        role="dialog"
        size="M"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="c3"
        >
          <h3
            className="c4 c5"
          >
            Title
          </h3>
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              className="c8 c9"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
          </div>
          <div
            className="c10"
          >
            <button
              className="c11"
              onClick={[Function]}
            >
              削除する
            </button>
            <button
              className="c12"
              onClick={[Function]}
            >
              キャンセル
            </button>
          </div>
        </div>
        <button
          className="c13 c14 c15"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal Default 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-style: none;
  outline: none;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c24 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-style: none;
  outline: none;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-fill-available;
  width: -moz-available;
  width: stretch;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text5);
  background-color: var(--charcoal-brand);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c24:not(:disabled):not([aria-disabled]):active,
.c24[aria-disabled='false']:active,
.c24:not(:disabled):not([aria-disabled]):focus,
.c24[aria-disabled='false']:focus,
.c24:not(:disabled):not([aria-disabled]):focus-visible,
.c24[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c24:not(:disabled):not([aria-disabled]):hover,
.c24[aria-disabled='false']:hover {
  color: var(--charcoal-text5-hover);
  background-color: var(--charcoal-brand-hover);
}

.c24:not(:disabled):not([aria-disabled]):active,
.c24[aria-disabled='false']:active {
  color: var(--charcoal-text5-press);
  background-color: var(--charcoal-brand-press);
}

.c24:disabled,
.c24[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c25 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-style: none;
  outline: none;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-fill-available;
  width: -moz-available;
  width: stretch;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c25:not(:disabled):not([aria-disabled]):active,
.c25[aria-disabled='false']:active,
.c25:not(:disabled):not([aria-disabled]):focus,
.c25[aria-disabled='false']:focus,
.c25:not(:disabled):not([aria-disabled]):focus-visible,
.c25[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c25:not(:disabled):not([aria-disabled]):hover,
.c25[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c25:not(:disabled):not([aria-disabled]):active,
.c25[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c25:disabled,
.c25[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c26 {
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font: inherit;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c26:disabled,
.c26[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c26:focus {
  outline: none;
}

.c26::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c13 {
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  display: flow-root;
  color: var(--charcoal-text1);
}

.c13::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c13::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c15 {
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text3);
  -webkit-transition: 0.2s color,0.2s box-shadow;
  transition: 0.2s color,0.2s box-shadow;
}

.c15::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c15::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c15:not(:disabled):not([aria-disabled]):hover,
.c15[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
}

.c15:not(:disabled):not([aria-disabled]):active,
.c15[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
}

.c15:not(:disabled):not([aria-disabled]):active,
.c15[aria-disabled='false']:active,
.c15:not(:disabled):not([aria-disabled]):focus,
.c15[aria-disabled='false']:focus,
.c15:not(:disabled):not([aria-disabled]):focus-visible,
.c15[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 > .c14 {
  margin-left: auto;
}

.c18 {
  display: inline-block;
  width: 100%;
}

.c18:disabled,
.c18[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c19 {
  width: 100%;
  margin-bottom: 8px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow;
  transition: 0.2s box-shadow;
}

.c20:disabled,
.c20[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c20:not(:disabled):not([aria-disabled]):focus,
.c20[aria-disabled='false']:focus,
.c20:not(:disabled):not([aria-disabled]):active,
.c20[aria-disabled='false']:active,
.c20:not(:disabled):not([aria-disabled]):focus-visible,
.c20[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c21 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
}

.c21::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c21::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c22 {
  color: var(--charcoal-text2);
}

.c27 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--charcoal-text3);
  background-color: var(--charcoal-transparent);
  border-radius: 999999px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
}

.c27:not(:disabled):not([aria-disabled]):hover,
.c27[aria-disabled='false']:hover {
  background-color: var( --charcoal-transparent-hover );
}

.c27:not(:disabled):not([aria-disabled]):active,
.c27[aria-disabled='false']:active {
  background-color: var( --charcoal-transparent-press );
}

.c27:not(:disabled):not([aria-disabled]):focus,
.c27[aria-disabled='false']:focus,
.c27:not(:disabled):not([aria-disabled]):active,
.c27[aria-disabled='false']:active,
.c27:not(:disabled):not([aria-disabled]):focus-visible,
.c27[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c27:disabled,
.c27[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
}

.c2 {
  margin: auto;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: 440px;
  background-color: var(--charcoal-surface1);
  border-radius: 24px;
}

.c2:focus {
  outline: none;
}

.c1 {
  z-index: 10;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 40px 0;
  box-sizing: border-box;
  background-color: var(--charcoal-surface4);
}

.c28 {
  position: absolute;
  top: 8px;
  right: 8px;
  color: var(--charcoal-text3);
  -webkit-transition: 0.2s color;
  transition: 0.2s color;
}

.c28:not(:disabled):not([aria-disabled]):hover,
.c28[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
}

.c28:not(:disabled):not([aria-disabled]):active,
.c28[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
}

.c4 {
  margin: 0;
  font-weight: inherit;
  font-size: inherit;
}

.c3 {
  height: 64px;
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  color: var(--charcoal-text1);
  font-size: 16px;
  line-height: 24px;
  font-weight: bold;
  display: flow-root;
}

.c5::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c5::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c8 {
  padding-left: 16px;
  padding-right: 16px;
}

.c6 {
  padding-bottom: 40px;
}

.c23 {
  display: grid;
  grid-auto-flow: row;
  grid-row-gap: 8px;
  padding-top: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  margin-bottom: 8px;
}

.c16 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c16:not(:disabled):not([aria-disabled]):hover,
.c16 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c16:not(:disabled):not([aria-disabled]):active,
.c16 [aria-disabled='false']:active {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c16:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c17 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c17::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c17::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c17:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c17::placeholder {
  color: var(--charcoal-text3);
}

.c7 {
  display: grid;
  gap: 24px;
}

.c9 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c9::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c9::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

@media (max-width:743px) {
  .c2 {
    max-width: 440px;
    width: calc(100% - 48px);
  }
}

@media (max-width:743px) {

}

@media (max-width:743px) {

}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="c0"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="c1"
      onPointerDown={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={null}
        onKeyDown={[Function]}
        role="dialog"
        size="M"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="c3"
        >
          <h3
            className="c4 c5"
          >
            Title
          </h3>
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              className="c8 c9"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
            <div
              className="c8"
            >
              <div
                className="c10"
              >
                <div
                  className="c11 c12"
                >
                  <label
                    className="c13"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Name
                  </label>
                  <div
                    className="c14 c15"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c16"
                >
                  <input
                    aria-labelledby="test-id"
                    className="c17"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Nagisa"
                    readOnly={false}
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              className="c8"
            >
              <div
                className="c10"
              >
                <div
                  className="c11 c12"
                >
                  <label
                    className="c13"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Country
                  </label>
                  <div
                    className="c14 c15"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c16"
                >
                  <input
                    aria-labelledby="test-id"
                    className="c17"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Tokyo"
                    readOnly={false}
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              className="c8"
            >
              <div
                className="c18"
              >
                <div
                  className="c11 c19"
                >
                  <label
                    className="c13"
                  >
                    Fruits
                  </label>
                  <div
                    className="c14 c15"
                  >
                    <span />
                  </div>
                </div>
                <button
                  className="c20"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="c21"
                  >
                    Apple
                  </span>
                  <pixiv-icon
                    class="c22"
                    name="16/Menu"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            className="c23"
          >
            <button
              className="c24"
              onClick={[Function]}
            >
              Apply
            </button>
            <button
              className="c25"
              onClick={[Function]}
            >
              Cancel
            </button>
          </div>
        </div>
        <button
          className="c26 c27 c28"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal Full Bottom Sheet 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-style: none;
  outline: none;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c19 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-style: none;
  outline: none;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-fill-available;
  width: -moz-available;
  width: stretch;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text5);
  background-color: var(--charcoal-brand);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c19:not(:disabled):not([aria-disabled]):active,
.c19[aria-disabled='false']:active,
.c19:not(:disabled):not([aria-disabled]):focus,
.c19[aria-disabled='false']:focus,
.c19:not(:disabled):not([aria-disabled]):focus-visible,
.c19[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c19:not(:disabled):not([aria-disabled]):hover,
.c19[aria-disabled='false']:hover {
  color: var(--charcoal-text5-hover);
  background-color: var(--charcoal-brand-hover);
}

.c19:not(:disabled):not([aria-disabled]):active,
.c19[aria-disabled='false']:active {
  color: var(--charcoal-text5-press);
  background-color: var(--charcoal-brand-press);
}

.c19:disabled,
.c19[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c20 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-style: none;
  outline: none;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-fill-available;
  width: -moz-available;
  width: stretch;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c20:not(:disabled):not([aria-disabled]):active,
.c20[aria-disabled='false']:active,
.c20:not(:disabled):not([aria-disabled]):focus,
.c20[aria-disabled='false']:focus,
.c20:not(:disabled):not([aria-disabled]):focus-visible,
.c20[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c20:not(:disabled):not([aria-disabled]):hover,
.c20[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c20:not(:disabled):not([aria-disabled]):active,
.c20[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c20:disabled,
.c20[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c21 {
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font: inherit;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c21:disabled,
.c21[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c21:focus {
  outline: none;
}

.c21::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c13 {
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  display: flow-root;
  color: var(--charcoal-text1);
}

.c13::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c13::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c15 {
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text3);
  -webkit-transition: 0.2s color,0.2s box-shadow;
  transition: 0.2s color,0.2s box-shadow;
}

.c15::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c15::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c15:not(:disabled):not([aria-disabled]):hover,
.c15[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
}

.c15:not(:disabled):not([aria-disabled]):active,
.c15[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
}

.c15:not(:disabled):not([aria-disabled]):active,
.c15[aria-disabled='false']:active,
.c15:not(:disabled):not([aria-disabled]):focus,
.c15[aria-disabled='false']:focus,
.c15:not(:disabled):not([aria-disabled]):focus-visible,
.c15[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 > .c14 {
  margin-left: auto;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--charcoal-text3);
  background-color: var(--charcoal-transparent);
  border-radius: 999999px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
}

.c22:not(:disabled):not([aria-disabled]):hover,
.c22[aria-disabled='false']:hover {
  background-color: var( --charcoal-transparent-hover );
}

.c22:not(:disabled):not([aria-disabled]):active,
.c22[aria-disabled='false']:active {
  background-color: var( --charcoal-transparent-press );
}

.c22:not(:disabled):not([aria-disabled]):focus,
.c22[aria-disabled='false']:focus,
.c22:not(:disabled):not([aria-disabled]):active,
.c22[aria-disabled='false']:active,
.c22:not(:disabled):not([aria-disabled]):focus-visible,
.c22[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c22:disabled,
.c22[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
}

.c2 {
  margin: auto;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: 440px;
  background-color: var(--charcoal-surface1);
  border-radius: 24px;
}

.c2:focus {
  outline: none;
}

.c1 {
  z-index: 10;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 40px 0;
  box-sizing: border-box;
  background-color: var(--charcoal-surface4);
}

.c23 {
  position: absolute;
  top: 8px;
  right: 8px;
  color: var(--charcoal-text3);
  -webkit-transition: 0.2s color;
  transition: 0.2s color;
}

.c23:not(:disabled):not([aria-disabled]):hover,
.c23[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
}

.c23:not(:disabled):not([aria-disabled]):active,
.c23[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
}

.c4 {
  margin: 0;
  font-weight: inherit;
  font-size: inherit;
}

.c3 {
  height: 64px;
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  color: var(--charcoal-text1);
  font-size: 16px;
  line-height: 24px;
  font-weight: bold;
  display: flow-root;
}

.c5::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c5::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c8 {
  padding-left: 16px;
  padding-right: 16px;
}

.c6 {
  padding-bottom: 40px;
}

.c18 {
  display: grid;
  grid-auto-flow: row;
  grid-row-gap: 8px;
  padding-top: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c12 {
  margin-bottom: 8px;
}

.c16 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c16:not(:disabled):not([aria-disabled]):hover,
.c16 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c16:not(:disabled):not([aria-disabled]):active,
.c16 [aria-disabled='false']:active {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c16:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c17 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c17::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c17::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c17:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c17::placeholder {
  color: var(--charcoal-text3);
}

.c7 {
  display: grid;
  gap: 24px;
}

.c9 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c9::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c9::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

@media (max-width:743px) {
  .c2 {
    max-width: 440px;
    width: calc(100% - 48px);
    max-width: unset;
    width: 100%;
    border-radius: 0;
    margin: auto 0 0 0;
    min-height: 100%;
  }
}

@media (max-width:743px) {
  .c1 {
    padding: 0;
  }
}

@media (max-width:743px) {
  .c3 {
    height: 48px;
  }
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="c0"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="c1"
      onPointerDown={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={null}
        onKeyDown={[Function]}
        role="dialog"
        size="M"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="c3"
        >
          <h3
            className="c4 c5"
          >
            Title
          </h3>
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              className="c8 c9"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
            <div
              className="c8"
            >
              <div
                className="c10"
              >
                <div
                  className="c11 c12"
                >
                  <label
                    className="c13"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Name
                  </label>
                  <div
                    className="c14 c15"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c16"
                >
                  <input
                    aria-labelledby="test-id"
                    className="c17"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Nagisa"
                    readOnly={false}
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              className="c8"
            >
              <div
                className="c10"
              >
                <div
                  className="c11 c12"
                >
                  <label
                    className="c13"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Country
                  </label>
                  <div
                    className="c14 c15"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c16"
                >
                  <input
                    aria-labelledby="test-id"
                    className="c17"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Tokyo"
                    readOnly={false}
                    type="text"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="c18"
          >
            <button
              className="c19"
              onClick={[Function]}
            >
              Apply
            </button>
            <button
              className="c20"
              onClick={[Function]}
            >
              Cancel
            </button>
          </div>
        </div>
        <button
          className="c21 c22 c23"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal Internal Scroll 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-style: none;
  outline: none;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-style: none;
  outline: none;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-fill-available;
  width: -moz-available;
  width: stretch;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c10:not(:disabled):not([aria-disabled]):active,
.c10[aria-disabled='false']:active,
.c10:not(:disabled):not([aria-disabled]):focus,
.c10[aria-disabled='false']:focus,
.c10:not(:disabled):not([aria-disabled]):focus-visible,
.c10[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c10:not(:disabled):not([aria-disabled]):hover,
.c10[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c10:not(:disabled):not([aria-disabled]):active,
.c10[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c10:disabled,
.c10[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c2 {
  margin: auto;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: 440px;
  background-color: var(--charcoal-surface1);
  border-radius: 24px;
}

.c2:focus {
  outline: none;
}

.c1 {
  z-index: 10;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 40px 0;
  box-sizing: border-box;
  background-color: var(--charcoal-surface4);
}

.c4 {
  margin: 0;
  font-weight: inherit;
  font-size: inherit;
}

.c3 {
  height: 64px;
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  color: var(--charcoal-text1);
  font-size: 16px;
  line-height: 24px;
  font-weight: bold;
  display: flow-root;
}

.c5::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c5::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c6 {
  padding-bottom: 40px;
}

.c8 {
  display: grid;
  grid-auto-flow: row;
  grid-row-gap: 8px;
  padding-top: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

.c7 {
  overflow: auto;
  max-height: calc( 100vh - 184px - 56px );
}

.c9 {
  position: relative;
}

.c9::before {
  content: '';
  pointer-events: none;
  border-top: 1px solid rgba(0,0,0,0.08);
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

@media (max-width:743px) {
  .c2 {
    max-width: 440px;
    width: calc(100% - 48px);
  }
}

@media (max-width:743px) {

}

@media (max-width:743px) {

}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="c0"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="c1"
      onPointerDown={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={null}
        onKeyDown={[Function]}
        role="dialog"
        size="M"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="c3"
        >
          <h3
            className="c4 c5"
          >
            Title
          </h3>
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              style={
                Object {
                  "background": "linear-gradient(#e66465, #9198e5)",
                  "height": 1000,
                }
              }
            />
          </div>
          <div
            className="c8 c9"
          >
            <button
              className="c10"
              onClick={[Function]}
            >
              Close
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal Not Dismmissable Story 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-style: none;
  outline: none;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:not(:disabled):not([aria-disabled]):hover,
.c0[aria-disabled='false']:hover {
  color: var(--charcoal-text2-hover);
  background-color: var(--charcoal-surface3-hover);
}

.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active {
  color: var(--charcoal-text2-press);
  background-color: var(--charcoal-surface3-press);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c11 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-style: none;
  outline: none;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: -webkit-fill-available;
  width: -moz-available;
  width: stretch;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 999999px;
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text5);
  background-color: var(--charcoal-brand);
  -webkit-transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  transition: 0.2s color,0.2s background-color,0.2s box-shadow;
  height: 40px;
}

.c11:not(:disabled):not([aria-disabled]):active,
.c11[aria-disabled='false']:active,
.c11:not(:disabled):not([aria-disabled]):focus,
.c11[aria-disabled='false']:focus,
.c11:not(:disabled):not([aria-disabled]):focus-visible,
.c11[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c11:not(:disabled):not([aria-disabled]):hover,
.c11[aria-disabled='false']:hover {
  color: var(--charcoal-text5-hover);
  background-color: var(--charcoal-brand-hover);
}

.c11:not(:disabled):not([aria-disabled]):active,
.c11[aria-disabled='false']:active {
  color: var(--charcoal-text5-press);
  background-color: var(--charcoal-brand-press);
}

.c11:disabled,
.c11[aria-disabled]:not([aria-disabled='false']) {
  cursor: default;
  opacity: 0.32;
}

.c2 {
  margin: auto;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: 440px;
  background-color: var(--charcoal-surface1);
  border-radius: 24px;
}

.c2:focus {
  outline: none;
}

.c1 {
  z-index: 10;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 40px 0;
  box-sizing: border-box;
  background-color: var(--charcoal-surface4);
}

.c4 {
  margin: 0;
  font-weight: inherit;
  font-size: inherit;
}

.c3 {
  height: 64px;
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  color: var(--charcoal-text1);
  font-size: 16px;
  line-height: 24px;
  font-weight: bold;
  display: flow-root;
}

.c5::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c5::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c8 {
  padding-left: 16px;
  padding-right: 16px;
}

.c6 {
  padding-bottom: 40px;
}

.c10 {
  display: grid;
  grid-auto-flow: row;
  grid-row-gap: 8px;
  padding-top: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

.c7 {
  display: grid;
  gap: 24px;
}

.c9 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c9::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c9::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

@media (max-width:743px) {
  .c2 {
    max-width: 440px;
    width: calc(100% - 48px);
  }
}

@media (max-width:743px) {

}

@media (max-width:743px) {

}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="c0"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="c1"
      onPointerDown={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={null}
        onKeyDown={[Function]}
        role="dialog"
        size="M"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="c3"
        >
          <h3
            className="c4 c5"
          >
            Title
          </h3>
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              className="c8 c9"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
          </div>
          <div
            className="c10"
          >
            <button
              className="c11"
              onClick={[Function]}
            >
              OK
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
